fix: 자막만 z-index가 적용되도록 수정

--- a/src/app/components/streaming/[id]/videoStreaming.module.scss
+++ b/src/app/components/streaming/[id]/videoStreaming.module.scss
@@ -21,7 +21,6 @@
 }
 
 .overlay {
-  z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
